feat: add per-engine health and reliability polish
Split health checks per engine with separate reachability dots,
switch stats fan-out to virtual threads, and make activity
filterable by engine. Tighten read access for engine routes.